@@ -1,4 +1,11 @@
-2005-03-9  Joe Shaw  <joeshaw@novell.com>
+2005-03-11  Joe Shaw  <joeshaw@novell.com>
+
+	* dbus/dbus-connection.c (dbus_connection_send_with_reply): Remove
+	this unref; it doesn't match up evenly in some codepaths.
+	(_dbus_connection_block_pending_call): Unref at every exitpoint;
+	this evenly matches with the ref near the top of this function.
+	
+2005-03-09  Joe Shaw  <joeshaw@novell.com>
 
         * NEWS: Update for 0.23.3
 
